# device-cloud-lib

./: .clang-format  .gitignore  .travis.yml  Android.mk  CMakeLists.txt  COPYING.md  LICENSE.txt  README.md  build-deps.sh  build.py  build.sh  build.yml  iot_build.h.in
build-sys/: generate_header.sh  generate_schema.sh
build-sys/android/: config_hdc_android.sh  generate_android_buildinfo.sh  generate_android_iot-connect.schema.json.sh  init.hdc.rc
build-sys/cmake/doxygen/: footer.html.in  (+2 more)
build-sys/cpack/: CMakeLists.txt  CPackOptions.cmake.in  linux_post_install.sh  linux_post_uninstall.sh
build-sys/vxworks/: layer.vsbl
build-sys/vxworks-layer-for-device-cloud-lib/: Makefile  layer.vsbl
build-sys/vxworks-lib/: Makefile  vxworks_lib.c  vxworks_lib.h
device-cloud-lib-layer/actions/: Makefile
device-cloud-lib-layer/cdf/: 20deviceCloudLib.cdf  30deviceCloudComplete.cdf  30deviceCloudManager.cdf
device-cloud-lib-layer/cfg/: deviceCloudActionsCfg.c  deviceCloudManagerCfg.c  deviceCloudManagerRtpCfg.c  deviceCloudTelemetryRtpCfg.c
device-cloud-lib-layer/control/: Makefile
device-cloud-lib-layer/device-manager/: Makefile
device-cloud-lib-layer/lib/: iot_build.h  iot_plugin_builtin.c
device-cloud-lib-layer/relay/: Makefile
device-cloud-lib-layer/telemetry/: Makefile
doc/: client-certs.md  helix-device-uHLD.md
share/: CMakeLists.txt
share/admin-tools/: setup-cloud-deps.py
share/admin-tools/app_defs/: demo_apps.cfg
share/admin-tools/thing_defs/: demo_defs.cfg  hdc_device_manager_def.cfg
share/apps/: Android.mk  CMakeLists.txt  Makefile.gcc.in  Makefile.msvc.in  README.gcc.md.in  README.msvc.md.in  iot.make.in
share/apps/actions/: Android.mk  CMakeLists.txt  README.md  actions.c  actions_script.cmd  actions_script.sh  actions_script_android.sh
share/apps/complete/: Android.mk  CMakeLists.txt  README.md  complete.c  complete.py  test_script.sh
share/apps/location/: Android.mk  CMakeLists.txt  README.md  location.c
share/apps/old-api/: CMakeLists.txt  README.md  old_api.c
share/apps/telemetry/: Android.mk  CMakeLists.txt  README.md  telemetry.c
share/apps/validate/: CMakeLists.txt  README.md  validate.c  validate_script.py
src/: CMakeLists.txt
src/api/: Android.mk  CMakeLists.txt  ca-certificates.crt  iot_action.c  iot_alarm.c  iot_attribute.c  iot_base.c  iot_base64.c  iot_common.c  iot_common.h  iot_event.c  iot_file.c  iot_location.c  iot_mqtt.c  iot_option.c  iot_plugin.c  iot_telemetry.c  wra_command.c  wra_common.c  wra_compat.c  wra_location.c  wra_metric.c  wra_service.c  wra_source.c
src/api/checksum/: CMakeLists.txt  iot_checksum.c  iot_checksum_crc32.c  iot_checksum_crc32.h
src/api/json/: CMakeLists.txt  iot_json_base.c  iot_json_base.h  iot_json_decode.c  iot_json_encode.c  iot_json_schema.c  iot_json_schema.h
src/api/plugin/: CMakeLists.txt  iot_plugin_builtin.c.in
src/api/plugin/tr50/: CMakeLists.txt  tr50.c
src/api/public/: CMakeLists.txt  iot.h  iot_checksum.h  iot_json.h  iot_mqtt.h  iot_plugin.h  wra.h  wra_command.h  wra_common.h  wra_compat.h  wra_location.h  wra_metric.h  wra_service.h  wra_source.h  wra_types.h
src/api/shared/: CMakeLists.txt  iot_base64.h  iot_defs.h  iot_types.h  wra_internal.h
src/app-common/: CMakeLists.txt  app_arg.c  app_arg.h
src/control/: Android.mk  CMakeLists.txt  control.c  control_config.c  control_config.h  control_main.c  control_main.h  iot-connect.schema.json
src/device-manager/: Android.mk  CMakeLists.txt  app_config.h  app_json.c  device_manager.c  device_manager_file.h  device_manager_main.c  device_manager_main.h  device_manager_md5.h  device_manager_ota.c  device_manager_ota.h  device_manager_sha256.h  iot.cfg.example
src/relay/: Android.mk  CMakeLists.txt  relay.c  relay_main.c  relay_main.h
src/software-update/: Android.mk  CMakeLists.txt  iot_update.c  iot_update_main.c  iot_update_main.h
src/update/: Android.mk  CMakeLists.txt  update.c  update_main.c  update_main.h
src/utilities/: Android.mk  CMakeLists.txt  app_arg.c  app_arg.h  app_config.c  app_config.h  app_json.h  app_json_base.c  app_json_base.h  app_json_decode.c  app_json_encode.c  app_json_schema.c  app_json_schema.h  app_log.c  app_log.h  app_path.c  app_path.h
src/vxworks/: iot_build.h
test/: CMakeLists.txt
test/api/: CMakeLists.txt  iot_action_test.c  iot_alarm_test.c  iot_attribute_test.c  iot_base64_test.c  iot_base_test.c  iot_common_test.c  iot_json_decode_test.c  iot_json_encode_test.c  iot_location_test.c  iot_telemetry_test.c
test/mock/: CMakeLists.txt  mock_api.c  mock_api.cmake  mock_osal.c  mock_osal.cmake
test/test-support/: CMakeLists.txt  test_support.c  test_support.h
test/unit/: CMakeLists.txt
test/unit/api/: CMakeLists.txt  iot_action_test.c  iot_alarm_test.c  iot_base64_test.c  iot_base_test.c  iot_common_test.c  iot_json_decode_test.c  iot_json_encode_test.c  iot_location_test.c  iot_telemetry_test.c
test/unit/mock/: mock_api.c  mock_osal.c  mock_osal.cmake
test/unit/utilities/: CMakeLists.txt  app_arg_test.c  app_log_test.c  app_path_test.c
vxworks-7-layer-for-device-cloud-lib/: Makefile  layer.vsbl
vxworks-7-layer-for-device-cloud-lib/cfg/: deviceCloudCompleteRtpCfg.c  deviceCloudLocationCfg.c
vxworks-7-layer-for-device-cloud-lib/lib/: Makefile  iot-connect.schema.json.c
vxworks-7-layer-for-device-cloud-lib/location/: Makefile
vxworks7-layer-for-device-cloud-lib/: Makefile  layer.vsbl
vxworks7-layer-for-device-cloud-lib/actions/: Makefile
vxworks7-layer-for-device-cloud-lib/cdf/: 20deviceCloudLib.cdf  30deviceCloudAction.cdf  30deviceCloudActions.cdf  30deviceCloudLocation.cdf  30deviceCloudManager.cdf  30deviceCloudTelemetry.cdf
vxworks7-layer-for-device-cloud-lib/cfg/: deviceCloudActionCfg.c  deviceCloudActionRtpCfg.c  deviceCloudActionsRtpCfg.c  deviceCloudCfg.c  deviceCloudCompleteCfg.c  deviceCloudCompleteRtpCfg.c  deviceCloudLocationCfg.c  deviceCloudLocationRtpCfg.c  deviceCloudManagerCfg.c  deviceCloudManagerRtpCfg.c  deviceCloudTelemetryCfg.c  deviceCloudTelemetryRtpCfg.c
vxworks7-layer-for-device-cloud-lib/complete/: Makefile
(+99 files in other folders)
